Camino only - Bug 379726: Prevent missing sheets when Camino is hidden. Patch by Sean Murphy <murph@seanmurph.com>. r=kreeger r=ardisson sr=smorgan